--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
             <div class="col-lg-3 col-sm-12 col-xs-12 text-sm-center mt-sm-5">
                 <h3 class="text-lg-center text-sm-start">Useful links</h3>
                 <div class="d-flex flex-column text-start">
-                <a href="#">USA</a>
-                <a href="#">India</a>
-                <a href="#">Acciojob</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12 col-xs-12 text-center mt-sm-5 ">
                 <h3 class="text-start">More links</h3>
                 <div class="d-flex flex-column text-start">
-                    <a href="#">New York</a>
-                    <a href="#">LA</a>
-                    <a href="#">Africa</a>
+                    <a href="#">Link</a>
+                    <a href="#">Link</a>
+                    <a href="#">Link</a>
                     </div>
             </div>
             <div class="container-fluid col-lg-3 col-sm-12 col-xs-12 mt-sm-5">
