--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Section 1</a>
+                <a class="nav-link active" aria-current="page" href="#carouselExampleDark">Section 1</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Section 2</a>
+                <a class="nav-link" href="#flex-dev">Section 2</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Section 3</a>
+                <a class="nav-link" href="#card">Section 3</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -83,7 +83,7 @@
       
        <div class="container mt-4">
         <!-- flex div -section -->
-        <div class="flex-div ">
+        <div class="flex-div " id="flex-dev">
             <div class="image-description">
                 <div class="image">
                     <img src="./assets/img_avatar3.png" width="300" height="200" alt="sorry" />
@@ -134,7 +134,7 @@
     <!-- galary -section -->
 
     <!-- bootstrap card -section -->
-        <div class="d-flex titlecard flex-lg-row flex-sm-column flex-xs-column  mt-5 p-2 justify-content-between">
+        <div class="d-flex titlecard flex-lg-row flex-sm-column flex-xs-column  mt-5 p-2 justify-content-between" id="card">
             <div class="card  mt-5 mx-auto" style="width: 18rem;">
                 <img src="./assets/img_avatar3.png"  width="300" height="200" class="card-img-top" alt="sorry">
                 <div class="card-body">
@@ -166,17 +166,17 @@
             <div class="col-lg-3 col-sm-12 col-xs-12 text-sm-center mt-sm-5">
                 <h3 class="text-lg-center text-sm-start">Useful links</h3>
                 <div class="d-flex flex-column text-start">
-                <a href="#">Link</a>
-                <a href="#">Link</a>
-                <a href="#">Link</a>
+                <a href="#">USA</a>
+                <a href="#">India</a>
+                <a href="#">Acciojob</a>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12 col-xs-12 text-center mt-sm-5 ">
                 <h3 class="text-start">More links</h3>
                 <div class="d-flex flex-column text-start">
-                    <a href="#">Link</a>
-                    <a href="#">Link</a>
-                    <a href="#">Link</a>
+                    <a href="#">New York</a>
+                    <a href="#">LA</a>
+                    <a href="#">Africa</a>
                     </div>
             </div>
             <div class="container-fluid col-lg-3 col-sm-12 col-xs-12 mt-sm-5">
